# tox-homeserver

./: Gopkg.toml  Makefile  apphelp.go  buildinfo.go  emitter_server.go  grpc_server.go  instance.go  main.go  misc.go  pubsub.go  readme.md  ths.proto
CMake/: PrecompiledHeader.cmake  gobuild.cmake
avhlp/: andinit.go  audio_player.go  audio_recorder.go  avhlp.go  c.go  c_windows.go  noandinit.go  suvcapd.go  util.go  video_recorder.go  video_recorder2.go
clidui/: clidui.go  ui_untitled.go  untitled.ui
client/: client.go  client_test.go  consts.go  context.go  group.go  state.go  storage.go  timeline.go  timeline_test.go  transport.go  uimessage.go  uimodels.go  uiutil.go  util.go
client/grpctp/: grpctp.go
client/nngtp/: nng.go
client/transport/: certs_bindata.go  transport.go
client/websocketstp/: websockets.go
common/: andhelper.go  common.go  fileinfo.go  stats.go
couchcache/: api.go  couchbase.go  datastore.go  main.go  main_test.go  rtflag.go
couchcache/demo/: demo.go
data/: schema.sql  server.crt  server.csr  server.key  toxhs.sqlite
demos/native-console-grpc-client/: readme.md
demos/native-qt-grpc-client/: clidui.go  ui_untitled.go  untitled.ui
docs/: api.md  api_zh.md  sync.md  sync_zh.md  todo.md
examples/: exampc.go
gofia/: Gopkg.toml  appcontext.go  appview.go  backevent.go  btversion.go  buildinfo.go  chatform.go  contactitem.go  demoview.go  logview.go  mainview.go  mainview_event_handler.go  matchax.go  pointer.go  settingview.go  storage.go  struct.go  viewmisc.go
gomain2c/: gomain2c.go
nofia/: Makefile  backend_proc.go  client.nim  crc64.c.ngo  crc64.nim  cxrtgoimpl.nim  datatypes.nim  ffi.nim  ffi1.c  ffi1.c.ngo  fiautil.nim  frontend_proc.go  frontend_proc.nim  go.mod  go.sum  gocrt.go  gocrt.nim  gogo.cpp  gogo.nim  gogo1.cpp  libgoimpl.nim  main1.go  nikui.go  nikui.nim  nimenv.nim  nimlog.nim  nimplus.nim  nofia.nimble  nuklear_x11_all.c.ngo  nuklear_x11_all.h  nuklear_x11_all.nim  pthread_hook.c  pthread_hook.c.ngo  pthread_hook.nim  readme.md  render_x11_native.c  render_x11_native.c.ngo  render_x11_native.h  render_x11_native.nim  uimessage.nim  (+4 more)
pofia/: appcontext.py  chatform.py  chatpage.py  dmain.py  fetch.py  log.py  mainform.py  peerform.py  readme.md  theme.py  widgetu.py
qofia/: Makefile  app.css  btversion.go  buildinfo.go  contact_item_view.ui  dmain.go  message_item_view.ui  qtc.go  rcc.qrc  scroll_widget.ui  untitled.ui  untitled2.ui
qofia-ffi/: Gopkg.toml  Makefile  about_view.go  add_friend.ui  android-libqofia-ffi.so-deployment-settings.json  andwrapmain.c.nogo  app.css  apphelp.go  appmanager_android.go  appmanager_dummy.go  avmananager.go  backend_proc.go  btversion.go  btversion.go.tpl  contact_info_view.go  contact_item_view.ui  create_room.ui  dmain.go  dmain_android.go  emain.go  emoji_panel.go  emoji_panel.ui  emoji_provider.go  emoji_provider_data.go  fetcher.go  frontend_proc.go  group_member_list_win.go  header_footer_view.go  main_window.go  main_window_view.go  make.sh  make2.sh  manager_android.go  message_item.go  message_item_view.ui  message_list_item.go  message_list_win.go  mkwin.sh  notifier.go  profile_view.go  (+21 more)
qofia-ffi/andemudir/: AndroidManifest.xml
qofia-ffi/andemudir/java/im/fixlan/golem/: GolemActivity.java  PendingIntents.java  ShareSysUtils.java  UriUtils.java  VideoRecorder.java
qofia-ffi/andemudir/res/values/: libs.xml
qofia-ffi/libs/: mkffi.sh  mkffmpeg.sh  mklibsodium.sh  mkoal.sh  mktoxcore.sh
qofia-ffi/patchs/: gomobile.patch
qofia-ffi/qml/: area.qml
qofia-ffi/qmlapp/: area.qml
qofia-ffi/styles/: dark.css  material.css
qofia-ffi/suvcap/: suvcap.c
qofia-ffi/theme/: apptst.css  dark.css  material.css  system.css
qofia-qml/: icons  vmain.go
qofia-qml/qmlapp/: ContactItem.qml  HSpacerItem.qml  MessageItem.qml  PageContacts.qml  PageLogin.qml  PageMessages.qml  PageWelcom.qml  Topnav.qml  VSpacerItem.qml  contact.qml  gomdltst.qml  main.qml
qofia2/: Makefile  appmanager_dummy.go  backend_proc.go  daemon.go  emain.go  frontend_proc.go  qofiaui.go  util.go
qofiaui/: CMakeLists.txt  chatform.cpp  chatform.h  chatform.ui  contact_item.cpp  contact_item.h  contact_item_view.ui  contactform.cpp  contactform.h  contactform.ui  create_room.ui  demo.cpp  emoji_category.ui  event.cpp  event.h  frontend.cpp  frontend.h  loginform.cpp  loginform.h  loginform.ui  mainform.cpp  mainform.h  mainform.ui  mainwin.cpp  mainwin.h  memberform.cpp  memberform.h  memberform.ui  message_item.cpp  message_item.h  qofiaui.cpp  qofiaui.h  rcc.qrc  settingform.cpp  settingform.h  settingform.ui  thefont.qrc  uiutils.cpp  uiutils.h  untitled.ui
qofiaui/theme/: material.css
server/: base_server.go  config.go  emitter_server.go  grpc_server.go  instance.go  instance_file.go  instance_video.go  main.go  misc.go  nng_server.go  offline_message.go  pubsub.go  socketio_server.go  ths.proto  uniform_handler.go  util.go  websocket_server.go
store/: external_file_store.go  external_file_store_test.go  file_storage.go  storage.go  storage_get.go  struct.go  stutil.go
thspbs/: extra.go  ths.pb.go
tofia/: gradle.properties  settings.gradle
tofia/app/: build.gradle
tofia/app/src/androidTest/java/io/dnesth/tofia/: ExampleInstrumentedTest.java
tofia/app/src/main/: AndroidManifest.xml
tofia/app/src/main/java/io/dnesth/tofia/: MainActivity.java
tofia/app/src/main/res/layout/: activity_main.xml
tofia/app/src/main/res/values/: strings.xml
tofia/app/src/test/java/io/dnesth/tofia/: ExampleUnitTest.java
tofia/gradle/wrapper/: gradle-wrapper.properties
tools/: AppRun  app.desktop  app.sh  emoji_codegen.py  mkcert.sh  mvtoxhs.sh  package.sh  readme.md  runtxy.sh
toxemu/: fetch.go  tox_emu.go
webdui/: index.html
